bug 223108 : Syntax error when loading non-existant external javascript file r+sr=bzbarsky